--- a/service.html
+++ b/service.html
@@ -106,7 +106,7 @@
                            الزراعية منحيث تقدم هايدروتك كل ما يخص بيع الاراضي الزراعية من</p>
                      </div>
                   </div>
-                  <a class="read_more" href="services.html">Read More</a>
+                  <a class="read_more" href="service.html">تعرف علي المزيد</a>
                </div>
             </div>
             <div class="col-md-4">
@@ -125,7 +125,7 @@
                            الزراعية منحيث تقدم هايدروتك كل ما يخص بيع الاراضي الزراعية من</p>
                      </div>
                   </div>
-                  <a class="read_more" href="services.html">Read More</a>
+                  <a class="read_more" href="service.html">تعرف علي المزيد</a>
                </div>
             </div>
             <div class="col-md-4">
@@ -144,7 +144,7 @@
                            الزراعية منحيث تقدم هايدروتك كل ما يخص بيع الاراضي الزراعية من</p>
                      </div>
                   </div>
-                  <a class="read_more" href="services.html">Read More</a>
+                  <a class="read_more" href="service.html">تعرف علي المزيد</a>
                </div>
             </div>
             <div class="col-md-4">
@@ -163,7 +163,7 @@
                            الزراعية منحيث تقدم هايدروتك كل ما يخص بيع الاراضي الزراعية من</p>
                      </div>
                   </div>
-                  <a class="read_more" href="services.html">Read More</a>
+                  <a class="read_more" href="service.html">تعرف علي المزيد</a>
                </div>
             </div>
          </div>
