--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                               الزراعية منحيث تقدم هايدروتك كل ما يخص بيع الاراضي الزراعية من</p>
                         </div>
                      </div>
-                     <a class="read_more" href="service.html">Read More</a>
+                     <a class="read_more" href="service.html">تعرف علي المزيد</a>
                   </div>
                </div>
                <div class="col-md-4">
@@ -213,7 +213,7 @@
                               الزراعية منحيث تقدم هايدروتك كل ما يخص بيع الاراضي الزراعية من</p>
                         </div>
                      </div>
-                     <a class="read_more" href="service.html">Read More</a>
+                     <a class="read_more" href="service.html">تعرف علي المزيد</a>
                   </div>
                </div>
                <div class="col-md-4">
@@ -232,7 +232,7 @@
                               الزراعية منحيث تقدم هايدروتك كل ما يخص بيع الاراضي الزراعية من</p>
                         </div>
                      </div>
-                     <a class="read_more" href="service.html">Read More</a>
+                     <a class="read_more" href="service.html">تعرف علي المزيد</a>
                   </div>
                </div>
                <div class="col-md-4">
@@ -251,7 +251,7 @@
                               الزراعية منحيث تقدم هايدروتك كل ما يخص بيع الاراضي الزراعية من</p>
                         </div>
                      </div>
-                     <a class="read_more" href="service.html">Read More</a>
+                     <a class="read_more" href="service.html">تعرف علي المزيد</a>
                   </div>
                </div>
             </div>
